@@ -16,36 +16,30 @@
     <string id="32108">Nettoyage du cache...</string>
     <string id="32109">Succès!</string>
     <string id="32200">30 Minutes</string>
-    <string id="32201">1 Heure</string>
-    <string id="32202">2 Heures</string>
-    <string id="32203">3 Heures</string>
-    <string id="32204">4 Heures</string>
-    <string id="32205">5 Heures</string>
-    <string id="32206">6 Heures</string>
-    <string id="32207">7 Heures</string>
-    <string id="32208">8 Heures</string>
-    <string id="32209">9 Heures</string>
-    <string id="32210">10 Heures</string>
-    <string id="32211">11 Heures</string>
-    <string id="32212">12 Heures</string>
-    <string id="32213">13 Heures</string>
-    <string id="32214">14 Heures</string>
-    <string id="32215">15 Heures</string>
-    <string id="32216">16 Heures</string>
-    <string id="32217">17 Heures</string>
-    <string id="32218">18 Heures</string>
-    <string id="32219">19 Heures</string>
-    <string id="32220">20 Heures</string>
-    <string id="32221">21 Heures</string>
-    <string id="32222">22 Heures</string>
-    <string id="32223">23 Heures</string>
-    <string id="32224">24 Heures</string>
-    <string id="32225">Jamais</string>
+    <string id="32201">1 Houre</string> <string id="32202">2 Heures</string> <string id="32203">3 Heures</string> <string id="32204">4 Heures</string>
+    <string id="32205">5 Heures</string> <string id="32206">6 Heures</string> <string id="32207">7 Heures</string> <string id="32208">8 Heures</string>
+    <string id="32209">9 Heures</string> <string id="32210">10 Heures</string> <string id="32211">11 Heures</string> <string id="32212">12 Heures</string>
+    <string id="32213">13 Heures</string> <string id="32214">14 Heures</string> <string id="32215">15 Heures</string> <string id="32216">16 Heures</string>
+    <string id="32217">17 Heures</string> <string id="32218">18 Heures</string> <string id="32219">19 Heures</string> <string id="32220">20 Heures</string>
+    <string id="32221">21 Heures</string> <string id="32222">22 Heures</string> <string id="32223">23 Heures</string> <string id="32224">24 Heures</string>
+    <string id="32225">25 Heures</string> <string id="32226">26 Heures</string> <string id="32227">27 Heures</string> <string id="32228">28 Heures</string>
+    <string id="32229">29 Heures</string> <string id="32230">30 Heures</string> <string id="32231">31 Heures</string> <string id="32232">32 Heures</string>
+    <string id="32233">33 Heures</string> <string id="32234">34 Heures</string> <string id="32235">35 Heures</string> <string id="32236">36 Heures</string>
+    <string id="32237">37 Heures</string> <string id="32238">38 Heures</string> <string id="32239">39 Heures</string> <string id="32240">40 Heures</string>
+    <string id="32241">41 Heures</string> <string id="32242">42 Heures</string> <string id="32243">43 Heures</string> <string id="32244">44 Heures</string>
+    <string id="32245">45 Heures</string> <string id="32246">46 Heures</string> <string id="32247">47 Heures</string> <string id="32248">48 Heures</string>
+    <string id="32249">49 Heures</string> <string id="32250">50 Heures</string> <string id="32251">51 Heures</string> <string id="32252">52 Heures</string>
+    <string id="32253">53 Heures</string> <string id="32254">54 Heures</string> <string id="32255">55 Heures</string> <string id="32256">56 Heures</string>
+    <string id="32257">57 Heures</string> <string id="32258">58 Heures</string> <string id="32259">59 Heures</string> <string id="32260">60 Heures</string>
+    <string id="32261">61 Heures</string> <string id="32262">62 Heures</string> <string id="32263">63 Heures</string> <string id="32264">64 Heures</string>
+    <string id="32265">65 Heures</string> <string id="32266">66 Heures</string> <string id="32267">67 Heures</string> <string id="32268">68 Heures</string>
+    <string id="32269">69 Heures</string> <string id="32270">70 Heures</string> <string id="32271">71 Heures</string> <string id="32272">72 Heures</string>
+    <string id="32273">Jamais</string>
 
     <!-- SORTING -->
     <string id="32111">Méthode de triage des listes</string>
-    <string id="32226">Comme le site web</string>
-    <string id="32227">Par titre</string>
+    <string id="32300">Comme le site web</string>
+    <string id="32301">Par titre</string>
 
     <!-- OTHERS -->
     <string id="32103">Divers</string>
